# cs2620

chat-grpc/: COMPARE.md  README.md
chat-grpc/client/: README.md  backend.py  buf.gen.yaml  json_backend.py  json_main.py  main.py  main.qml  main_test.py  pyproject.toml
chat-grpc/client/protocols/dyde/: server.py
chat-grpc/client/protocols/json/: client.py
chat-grpc/proto/: buf.yaml
chat-grpc/proto/converse/: converse.proto
chat-grpc/server/: .clang-format  .gitignore  CMakeLists.txt  Makefile  buf.gen.yaml  main.sql  vcpkg.json
chat-grpc/server/src/: connections.cpp  connections.hpp  database.cpp  database.hpp  main.cpp  main_test.cpp  operations.cpp  operations.hpp  server.cpp  server.hpp
chat-grpc/server/src/protocols/json/: client.cpp  client.hpp  json_client.cpp  server.cpp
chat/client/: Makefile  backend.py  main.py  pyproject.toml
chat/client/protocols/: utils.py  utils_test.py
chat/client/protocols/dyde/: client.py  client_test.py  deserialize.py
chat/client/protocols/json/: client_test.py  deserialize.py  server.py
chat/server/: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
chat/server/src/: database.hpp  main.cpp  main_test.cpp  operations.hpp  server.cpp
chat/server/src/protocols/: utils.cpp  utils.hpp
chat/server/src/protocols/dyde/: client.cpp  client.hpp  server.cpp
chat/server/src/protocols/json/: server.hpp
converse/: CMakeLists.txt  CMakePresets.json  README.md  main.db  vcpkg.json
converse/exe_client/: CMakeLists.txt  CMakePresets.json  README.md  flake.nix  vcpkg-configuration.json  vcpkg.json
converse/exe_client/src/: backend.cpp  backend.hpp  main.qml  reader.cpp  reader.hpp
converse/exe_server/: CMakeLists.txt  README.md  flake.nix  vcpkg.json
converse/exe_server/src/: database.cpp  database.hpp  link.cpp  link.hpp  main.cpp  main_test.cpp  reader.cpp  reader.hpp  server.cpp  server.hpp
converse/exe_server/src/service/health/: impl.cpp  impl.hpp
converse/exe_server/src/service/link/: impl.cpp  impl.hpp
converse/exe_server/src/service/main/: impl.cpp  impl.hpp
converse/lib_logging/: CMakeLists.txt  README.md
converse/lib_logging/src/converse/logging/: core.cpp
converse/lib_proto/: CMakeLists.txt  README.md  buf.gen.yaml  flake.nix
converse/lib_proto/src/converse/service/health/: health.grpc.pb.cc  health.grpc.pb.h  health.pb.cc  health.pb.h
converse/lib_proto/src/converse/service/link/: link.grpc.pb.cc  link.grpc.pb.h  link.pb.cc  link.pb.h
converse/lib_proto/src/converse/service/main/: main.pb.h
converse/lib_proto/src/proto/converse/service/health/: health.proto
converse/lib_proto/src/proto/converse/service/link/: link.proto
converse/lib_proto/src/proto/converse/service/main/: main.proto
converse/src/exe_client/: CMakeLists.txt
converse/src/exe_client/src/: backend.cpp  backend.hpp  main.cpp  main.qml  reader.cpp  reader.hpp
converse/src/exe_server/: CMakeLists.txt  README.md
converse/src/exe_server/src/: database.cpp  database.hpp  main.cpp  main_test.cpp  server.cpp  server.hpp  sql.hpp
converse/src/lib_logging/: CMakeLists.txt
converse/src/lib_logging/src/converse/logging/: core.cpp  core.hpp
converse/src/lib_proto/: CMakeLists.txt  buf.yaml
converse/src/lib_proto/src/converse/service/main/: main.grpc.pb.cc  main.grpc.pb.h  main.pb.cc  main.pb.h
converse/src/lib_proto/src/proto/converse/service/main/: main.proto
mousedb/: README.md
mousedb/client/: CMakeLists.txt  README.md  compose.yaml  flake.nix  vcpkg.json
mousedb/client/src/: client.hpp  client_main.cpp  hlc.hpp  main.cpp
mousedb/exe_client/: CMakeLists.txt  Dockerfile  README.md  flake.nix
mousedb/exe_server/: CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  compose.yaml  flake.nix
mousedb/exe_server/src/: main.cpp
mousedb/lib_database/: .dockerignore  CMakeLists.txt  Dockerfile  README.md  compose.yaml  flake.nix
mousedb/lib_database/src/: arena.cpp  arena.test.cpp  memtable.bench.cpp  memtable.cpp  memtable.test.cpp  sstable.hpp
mousedb/server/: .dockerignore  Dockerfile  README.md  compose.yaml  flake.nix
mousedb/server/exe_server/: .clang-format  CMakeLists.txt  README.md  vcpkg.json
mousedb/server/exe_server/src/: lww.hpp  main.cpp  server.cpp  server.hpp  server_main.cpp
mousedb/server/lib_database/: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
mousedb/server/lib_database/cmake/: mousedbConfig.cmake.in
mousedb/server/lib_database/include/mousedb/database/: core.hpp
mousedb/server/lib_database/src/: arena.bench.cpp  arena.cpp  arena.hpp  arena.test.cpp  filter.cpp  filter.hpp  filter.test.cpp  hlce.hpp  logging.cpp  logging.hpp  memtable.cpp  memtable.hpp  memtable.test.cpp  random.cpp  random.hpp  spin_mutex.hpp  state.hpp
mousedb/server/lib_database/src/mousedb/database/: core.cpp  core.test.cpp
tempus/: .clang-format  CMakeLists.txt  README.md
tempus/src/: logger.cpp  logger.hpp  logic.cpp  logic.hpp  main.cpp  main_test.cpp
